--- a/server/zanata-frontend/src/editor/package.json
+++ b/server/zanata-frontend/src/editor/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "combokeys": "2.4.6",
+    "less": "^2.7.1",
     "normalize.css": "3.0.1",
     "react-bootstrap": "^0.30.7",
     "suitcss-components-button": "^4.0.0",
